# StyleStream

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
configs/data/: emilia.yaml  libritts.yaml  lmg.yaml
configs/destylizer/: fast.yaml  offline.yaml  streaming.yaml
configs/eval/: stylestream_test.yaml
configs/streaming/: distillation.yaml  stylizer.yaml
configs/stylizer/: fast.yaml  offline.yaml  streaming.yaml
configs/vocoder/: causal_vocos.yaml  fast.yaml
docs/: index.html  milestones.md  paper_analysis.md  phase0_milestones.md  phase1_data_milestones.md  phase2_destylizer_milestones.md  phase3_stylizer_milestones.md  phase4_5_milestones.md  phase6_eval_milestones.md
scripts/: download_esd.py  download_globe.py  download_libritts.py  download_models.py  evaluate.py  inference.py  preprocess_data.py  streaming_inference.py  train_destylizer.py  train_streaming_destylizer.py  train_streaming_stylizer.py  train_stylizer.py  train_vocoder.py  validate_features.py
stylestream/: config.py
stylestream/data/: __init__.py  destylizer_dataset.py  hubert_extractor.py  manifest.py  text.py  (+3 more)
tests/: test_adaln_zero.py  test_asr_head.py  test_audio.py  test_cfg.py  test_cfm.py  test_conformer.py  test_datasets.py  test_destylizer_model.py  test_dit.py  test_eval_pipeline.py  test_fsq.py  test_manifest.py  test_mel.py  test_rope.py  test_streaming_attention.py  test_streaming_models.py  test_style_encoder.py  test_stylizer_model.py  test_text.py  test_timestep_embedding.py  test_vocoder_components.py  test_vocoder_model.py
(+60 files in other folders)
