[project]
name = "stylestream"
version = "0.1.0"
description = "Reproduction implementation of StyleStream: Real-Time Zero-Shot Voice Style Conversion"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "einops>=0.7",
    "safetensors>=0.4",
    "soundfile>=0.12",
    "librosa>=0.10",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
train = [
    "wandb",
    "tensorboard",
    "datasets",
]
eval = [
    "resemblyzer",
    "jiwer",
    "matplotlib>=3.7",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
